--- a/src/main/resources/ucf/assignments/CreateNewList.fxml
+++ b/src/main/resources/ucf/assignments/CreateNewList.fxml
@@ -24,7 +24,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField />
+            <TextField promptText="Title" />
          </children>
       </HBox>
    </center>
