--- a/src/main/resources/ucf/assignments/CreateNewItem.fxml
+++ b/src/main/resources/ucf/assignments/CreateNewItem.fxml
@@ -9,49 +9,39 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.HelloController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.HelloController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button mnemonicParsing="false" onAction="#onNewItemOkClick" prefWidth="80.0" text="Ok" />
-            <Button mnemonicParsing="false" onAction="#onItemCancelClick" prefWidth="80.0" text="Cancel" />
-         </children>
+         <Button mnemonicParsing="false" onAction="#onNewItemOkClick" prefWidth="80.0" text="Ok"/>
+         <Button mnemonicParsing="false" onAction="#onItemCancelClick" prefWidth="80.0" text="Cancel"/>
       </HBox>
    </bottom>
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Label text="Enter Name: ">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField promptText="Item Name" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Label text="Enter Description: ">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField prefHeight="90.0" prefWidth="250.0" promptText="Description" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Label text="Enter Due Date: ">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <DatePicker promptText="Due Date" />
-               </children>
-            </HBox>
-         </children>
+         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+            <Label text="Enter Name: ">
+               <font>
+                  <Font size="14.0"/>
+               </font>
+            </Label>
+            <TextField fx:id="newItemNameField" promptText="Item Name"/>
+         </HBox>
+         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+            <Label text="Enter Description: ">
+               <font>
+                  <Font size="14.0"/>
+               </font>
+            </Label>
+            <TextField fx:id="newItemDescField" prefHeight="90.0" prefWidth="250.0" promptText="Description"/>
+         </HBox>
+         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+            <Label text="Enter Due Date: ">
+               <font>
+                  <Font size="14.0"/>
+               </font>
+            </Label>
+            <DatePicker fx:id="newItemDateField" promptText="Due Date"/>
+         </HBox>
       </VBox>
    </center>
 </BorderPane>
