--- a/src/main/resources/ucf/assignments/ToDoList.fxml
+++ b/src/main/resources/ucf/assignments/ToDoList.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.HelloController">
    <bottom>
@@ -24,11 +23,7 @@
    <top>
       <HBox alignment="CENTER" spacing="90.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Name">
-               <font>
-                  <Font name="System Bold" size="36.0" />
-               </font>
-            </Label>
+            <TextField fx:id="toDoListNameTextField" />
             <Button mnemonicParsing="false" onAction="#onChangeTitleClick" text="Change Title" />
          </children>
       </HBox>
