--- a/src/main/resources/ucf/assignments/ToDoList.fxml
+++ b/src/main/resources/ucf/assignments/ToDoList.fxml
@@ -1,56 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.HelloController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.ToDoListController">
    <bottom>
-      <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="90.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button mnemonicParsing="false" onAction="#onAddNewItemClick" text="Add New Item" />
-            <Button mnemonicParsing="false" onAction="#onRemoveItemClick" text="Remove Item(s)" />
-            <Button mnemonicParsing="false" onAction="#onSaveToDoListClick" text="Save List" />
-            <Button mnemonicParsing="false" onAction="#onBackClick" text="Back" />
-         </children>
+      <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="50.0" BorderPane.alignment="CENTER">
+         <Button mnemonicParsing="false" onAction="#onAddNewItemClick" text="Add New Item"/>
+         <Button mnemonicParsing="false" onAction="#onRemoveItemClick" text="Remove Item(s)"/>
+         <Button mnemonicParsing="false" onAction="#onClearListClick" text="Clear List"/>
+         <Button mnemonicParsing="false" onAction="#onSaveToDoListClick" text="Save List"/>
+         <Button mnemonicParsing="false" onAction="#onBackClick" text="Back"/>
       </HBox>
    </bottom>
    <top>
       <HBox alignment="CENTER" spacing="90.0" BorderPane.alignment="CENTER">
-         <children>
-            <TextField fx:id="toDoListNameTextField" />
-            <Button mnemonicParsing="false" onAction="#onChangeTitleClick" text="Change Title" />
-         </children>
+         <Label fx:id="toDoListNameLabel" text="Label">
+            <font>
+               <Font name="System Bold" size="36.0"/>
+            </font>
+         </Label>
       </HBox>
    </top>
    <center>
       <VBox spacing="10.0" BorderPane.alignment="CENTER">
-         <children>
-            <ScrollPane>
-               <content>
-                  <TableView>
-                    <columns>
-                      <TableColumn onEditCommit="#changeNameCellEvent" prefWidth="172.79995423555374" text="Name" />
-                      <TableColumn onEditCommit="#changeDueDateCellEvent" prefWidth="111.19996643066406" text="Due Date" />
-                        <TableColumn minWidth="0.0" onEditCommit="#changeDescriptionCellEvent" prefWidth="268.800048828125" text="Description" />
-                        <TableColumn maxWidth="76.00003662109373" prefWidth="76.00003662109373" text="Done" />
-                    </columns>
-                  </TableView>
-               </content>
-            </ScrollPane>
-            <HBox alignment="CENTER" spacing="40.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#onShowCompleteClick" text="Show Complete" />
-                  <Button mnemonicParsing="false" onAction="#onShowIncompleteClick" text="Show Incomplete" />
-                  <Button mnemonicParsing="false" onAction="#onShowAllClick" text="Show All" />
-               </children>
-            </HBox>
-         </children>
+         <ScrollPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+            <TableView fx:id="toDoListTableView" editable="true" fixedCellSize="0.0">
+               <columns>
+                  <TableColumn fx:id="itemNameColumn" maxWidth="1.7976931348623157E308" minWidth="175.0"
+                               onEditCommit="#changeNameCellEvent" prefWidth="-1.0" text="Name"/>
+                  <TableColumn fx:id="itemDueColumn" maxWidth="1.7976931348623157E308" minWidth="110.0"
+                               onEditCommit="#changeDueDateCellEvent" prefWidth="-1.0" text="Due Date"/>
+                  <TableColumn fx:id="itemDescColumn" maxWidth="1.7976931348623157E308" minWidth="270.0"
+                               onEditCommit="#changeDescriptionCellEvent" prefWidth="-1.0" text="Description"/>
+                  <TableColumn fx:id="itemDoneColumn" maxWidth="1.7976931348623157E308" minWidth="75.0"
+                               prefWidth="-1.0" text="Done"/>
+               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+               </columnResizePolicy>
+            </TableView>
+         </ScrollPane>
+         <HBox alignment="CENTER" prefWidth="601.0" spacing="40.0">
+            <Button mnemonicParsing="false" onAction="#onShowCompleteClick" text="Show Complete"/>
+            <Button mnemonicParsing="false" onAction="#onShowIncompleteClick" text="Show Incomplete"/>
+            <Button mnemonicParsing="false" onAction="#onShowAllClick" text="Show All"/>
+         </HBox>
       </VBox>
    </center>
 </BorderPane>
